Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1466

The plugin exposing the Qt Declarative primitives has an invalid name

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 2.1.0
    • None
    • Quick Designer
    • None

    Description

      The plugin exposing the Qt Declarative primitives appears to be called 'FxPlugin'. As Fx is not the name of the primitives any more we want to avoid using that name so as to prevent confusion and reduced brand awareness about the real name. So this plugin should be renamed.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thohartm Thomas Hartmann
            aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes