QmlDesigner: renaming fxplugin to qtquickplugin

See: QTCREATORBUG-1466