src/plugins/qmldesigner/qtquickplugin/qtquickplugin.pri
@@ -1,0 +1,17 @@
+TARGET = qtquickplugin
+TEMPLATE = lib
+CONFIG += plugin
+
+QT += script \
+      declarative
+
+include (../designercore/iwidgetplugin.pri)
+
+DEFINES += QTQUICK_LIBRARY
+SOURCES += $$PWD/qtquickplugin.cpp
+
+HEADERS += $$PWD/qtquickplugin.h  $$PWD/../designercore/include/iwidgetplugin.h
+
+RESOURCES += $$PWD/qtquickplugin.qrc
+
+OTHER_FILES += $$PWD/quick.metainfo
